TEST_PROGRAMS/VALID/05/empty_three_part_loop.go
/* Empty three-part loop. */

package main

func main() {
	for ; ; {
		break
	}
}
