TEST_PROGRAMS/INVALID/05/empty_three_part_loop_missing_semi.go
/* Empty three-part loop missing semi. */

package main

func main() {
	for ; {
		break
	}
}
